# Proyecto-01-Sis-Op-

./: CMakeLists.txt  ejecutable  informe.md  oscilador.c  plot.py
docs/: CMakeDirectoryInformation.cmake  Makefile.cmake  Makefile2  TargetDirectories.txt
docs/ejecutable.dir/: DependInfo.cmake  build.make  cmake_clean.cmake  compiler_depend.internal  compiler_depend.make  link (1).txt  oscilador.c.o.d
